hotfix FIxes webkit backface visibility

--- a/projects/30sites/site04_facememo/style.css
+++ b/projects/30sites/site04_facememo/style.css
@@ -54,6 +54,7 @@ body {
   width: 100%;
   height: 100%;
   position: absolute;
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   border-radius: 10px;
 }
